<resources>
    <string name="app_name">ISKA Notas</string>
    <string name="navigation_drawer_open">Abrir menu de navegação</string>
    <string name="navigation_drawer_close">Fechar menu de navegação</string>
    <string name="about_title">ISKA NOTAS</string>
    <string name="about_body">Aplicação faz uso de web scraping, é uma solução para quem quer ter acesso a dados estruturados da web de uma forma automatizada. O web scraping pode ser bastante útil quando o site do qual se pretende obter dados não tem uma API ou, caso tenha, forneça apenas um acesso limitado aos dados. O web scraping é o processo de recolha de dados estruturados da web de uma forma automatizada. É também conhecido como web data extraction ou data scraping.\n\n A aplicação consegue extrair os dados mesmo estando contencioso no sistema. Isso significa que podes ver tuas notas mesmo estando contencioso.\n\n A aplicação consegue gerar dois ficheiros sendo um xlsx (Excel) e outro pdf, contendo suas notas de todos os anos em tabelas. Recomendo usar o ficheiro xlsx para impressão invés do pdf.\n\n A aplicação ainda encontra-se em fase de desenvolvimento, pode conter falhas!.</string>
    <string name="about_developer">Desenvolvedor: Vivaldo Roque</string>
    <string name="home_appbar_title">ISKA NOTAS</string>
    <string name="login_password_label">Senha</string>
    <string name="institute_logo">Logo do ISKA</string>
    <string name="login_title">Secretaria online</string>
    <string name="login_username_label">Utilizador</string>
    <string name="login_username_hint">Nº de estudante</string>
    <string name="login_btn_entrar">Entrar</string>
    <string name="institute_name">Instituto Superior Politécnico de Kangonjo</string>
    <string name="contacto">Contacto</string>
    <string name="estado_actual">Estado actual</string>
    <string name="cadeiras_dispensadas">Cadeiras dispensadas</string>
    <string name="exames">Exames</string>
    <string name="recursos">Recursos</string>
    <string name="cadeiras_em_atraso">Cadeiras em atraso</string>
    <string name="sobre_a_disciplina">Sobre a disciplina</string>
    <string name="nota_final">Nota final</string>
    <string name="resultado">Resultado</string>
    <string name="dispensado">Dispensado</string>
    <string name="avalia_o_cont_nua">Avaliação contínua</string>
    <string name="_1_prova_parcelar">1.ª prova parcelar</string>
    <string name="_2_prova_parcelar">2.ª prova parcelar</string>
    <string name="final_cont_nua">Final contínua</string>
    <string name="exame">Exame</string>
    <string name="recurso">Recurso</string>
    <string name="poca_especial">Época especial</string>
    <string name="melhoria">Melhoria</string>
    <string name="loading_msg">Por favor aguarde…</string>
    <string name="login_menu_action_title">Acerca da aplicação</string>
    <string name="home_menu_inicio">Inicio</string>
    <string name="home_menu_notas">Notas</string>
    <string name="home_menu_exportar_dados">Exportar dados</string>
    <string name="home_menu_about">Acerca da aplicação</string>
    <string name="simulador_de_m_dia">Simulador de média</string>
    <string name="a_c">A.C.</string>
    <string name="plus">+</string>
    <string name="_1_p">1ª.P.</string>
    <string name="_2_p">2ª.P.</string>
    <string name="equal">=</string>
    <string name="f_c">F.C.</string>
</resources>